--- a/app/views/speakers/show.html.erb
+++ b/app/views/speakers/show.html.erb
@@ -24,6 +24,9 @@
   <strong>Description:</strong>
   <%= @speaker.description %>
 </p>
+<p>
+  <strong>Photo:</strong>
+  <%= @speaker.avatar %>
+</p>
 
-<%= link_to 'Edit', edit_speaker_path(@speaker) %> |
 <%= link_to 'Back', speakers_path %>
