--- a/app/views/speakers/_form.html.erb
+++ b/app/views/speakers/_form.html.erb
@@ -31,6 +31,10 @@
     <%= f.label :description %><br>
     <%= f.text_area :description %>
   </div>
+  <div class="field">
+  <%= f.label :photo %><br>  
+  <%= f.file_field :avatar %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
