--- a/app/views/speakers/show.html.erb
+++ b/app/views/speakers/show.html.erb
@@ -26,7 +26,7 @@
 </p>
 <p>
   <strong>Photo:</strong>
-  <%= @speaker.avatar %>
+  <%= image_tag @speaker.avatar.url(:medium) %>
 </p>
 
 <%= link_to 'Back', speakers_path %>
