--- a/app/views/speakers/index.html.erb
+++ b/app/views/speakers/index.html.erb
@@ -22,7 +22,8 @@
         <td><%= speaker.contact %></td>
         <td><%= speaker.topic %></td>
         <td><%= speaker.description %></td>
-        <td><%= speaker.avatar %></td>
+        <td><%= image_tag @speaker.avatar.url(:thumb) %></td>
+          
 
         <td><%= link_to 'Show', speaker %></td>
        <!--  <td><%= link_to 'Edit', edit_speaker_path(speaker) %></td>
