before style change

--- a/app/views/speakers/_form.html.erb
+++ b/app/views/speakers/_form.html.erb
@@ -1,13 +1,13 @@
-<%= form_for(@speaker) do |f| %>
+<%= form_for (@speaker), :url => speakers_path, :html => { :multipart => true } do |f| %>
   <% if @speaker.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@speaker.errors.count, "error") %> prohibited this speaker from being saved:</h2>
 
-      <ul>
+    <!--   <ul>
       <% @speaker.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
-      </ul>
+      </ul> -->
     </div>
   <% end %>
 
