--- a/app/views/welcomes/index.html.erb
+++ b/app/views/welcomes/index.html.erb
@@ -1,23 +1,23 @@
 <div class="container">
-  <div class="row">
+ <!--  <div class="jumbotron row"> -->
     <div class="col-md-8">
       <h1 style="color: white;" align="center"><u>Welcome to <span style="color: #f04545;">Spkr</span></u></h1>
-      <p><h3 style="color: white;" align="center">The local connect for experts and events. The best resource for community groups to find local experts to speak at any size or type of gathering. A great way for passionate people to find speaking opportunities and develop their speaking skills and network. </h3></p>
+      <p><h2 style="color: white;" align="center">The local connect for experts and events. </h2></p>
+        <p><h3 style="color: white;" align="center">The best resource for community groups to find local experts to speak at any size or type of gathering. A great way for passionate people to find speaking opportunities and develop their speaking skills and network. </h3></p>
     </div>
     
     <ul style="list-style: none; z-index: -1;" class="cb-slideshow">
-      <li><span>Image 01</span><div><h5></h5></div></li>
-      <li><span>Image 02</span><div><h5></h5></div></li>
-      <li><span>Image 03</span><div><h5></h5></div></li>
-      <li><span>Image 04</span><div><h5></h5></div></li>
-      <li><span>Image 05</span><div><h5></h5></div></li>
-      <li><span>Image 06</span><div><h5></h5></div></li>
+      <li><span>Image 01</span></li>
+      <li><span>Image 02</span></li>
+      <li><span>Image 03</span></li>
+      <li><span>Image 04</span></li>
+      <li><span>Image 05</span></li>
+      <li><span>Image 06</span></li>
+      <li><span>Image 07</span></li>
     </ul>
     <h3 style="color:white;" align="center"><%= link_to 'See Speakers', speakers_path, class: 'btn btn-default' %></h3>
   </div>
 
 </div>
 
-  <div class="row">
-    <h1>test</h1>
-  </div>
+  
