--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,7 +15,6 @@
  *= import "bootstrap"
  *= import "font-awesome-sprockets"
  *= import "font-awesome"
- *= require_tree .
  *= require custom
- *= require_self
  */
+ @import "bootstrap";
