--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,4 +1,12 @@
 @import "bootstrap";
+@import "bootswatch";
+
+.sign{
+   position:absolute;
+   left:90%;
+   top  :0;
+}
+
 
 .cb-slideshow,
 .cb-slideshow:after { 
@@ -9,10 +17,10 @@
     left: 0px;
     z-index: 0; 
 }
-.cb-slideshow:after { 
-    content: '';
-    background: transparent url(../images/pattern.png) repeat top left; 
-}
+// .cb-slideshow:after { 
+//     content: '';
+//     background: transparent url(../images/pattern.png) repeat top left; 
+// }
 .cb-slideshow li span { 
     width: 100%;
     height: 100%;
