--- a/app/views/speakers/edit.html.erb
+++ b/app/views/speakers/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing Speaker</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Show', @speaker %> |
-<%= link_to 'Back', speakers_path %>
+<%- model_class = Speaker -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => [:'helpers.titles.edit', 'Edit %{model}'], :model => model_class.model_name.human.titleize %></h1>
+</div>
+<%= render :partial => 'form' %>
