--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-
+<div class="container">
 <%= form_for @user do |f| %>
   <% if @user.errors.any? %>
     <div class="error_messages">
@@ -25,3 +25,4 @@
   <div class="actions"><%= f.submit %></div>
 <% end %>
 
+</div>
