--- a/app/views/speakers/_form.html.erb
+++ b/app/views/speakers/_form.html.erb
@@ -64,19 +64,19 @@
 
    <div class="control-group">
     <%= f.label :avatar_file_name, :class => 'control-label' %>
-    <div class="controls">
+<!--     <div class="controls">
       <%= f.text_field :avatar_file_name, :class => 'form-control' %>
     </div>
     <%= error_span(@speaker[:avatar_file_name]) %>
-  </div> 
-  <div class="control-group">
+  </div>  -->
+<!--   <div class="control-group">
     <%= f.label :avatar_content_type, :class => 'control-label' %>
     <div class="controls">
       <%= f.text_field :avatar_content_type, :class => 'form-control' %>
     </div>
     <%= error_span(@speaker[:avatar_content_type]) %>
   </div>
-    <%= error_span(@speaker[:avatar_updated_at]) %>
+    <%= error_span(@speaker[:avatar_updated_at]) %> -->
   </div>
 
 
