--- a/app/views/speakers/_form.html.erb
+++ b/app/views/speakers/_form.html.erb
@@ -52,31 +52,13 @@
     </div>
     <%= error_span(@speaker[:description]) %>
   </div>
-  <%= f.file_field :avatar %>
 
-  div class="control-group">
-    <%= f.label :avatar, :class => 'control-label' %>
+  <div class="control-group">
+    <%= f.label :picture, :class => 'control-label' %>
     <div class="controls">
       <%= f.file_field :avatar, :class => 'form-control' %>
     </div>
     <%= error_span(@speaker[:avatar_file_name]) %>
-  </div>
-
-   <div class="control-group">
-    <%= f.label :avatar_file_name, :class => 'control-label' %>
-<!--     <div class="controls">
-      <%= f.text_field :avatar_file_name, :class => 'form-control' %>
-    </div>
-    <%= error_span(@speaker[:avatar_file_name]) %>
-  </div>  -->
-<!--   <div class="control-group">
-    <%= f.label :avatar_content_type, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.text_field :avatar_content_type, :class => 'form-control' %>
-    </div>
-    <%= error_span(@speaker[:avatar_content_type]) %>
-  </div>
-    <%= error_span(@speaker[:avatar_updated_at]) %> -->
   </div>
 
 
